--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       href="./public/favicon.svg"
       sizes="16x16"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>&nbsp;Camper rental</title>
   </head>
