--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./public/favicon.svg"
-      sizes="16x16"
-    />
+    <link rel="icon" type="image/x-icon" href="/favicon.svg" sizes="16x16" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
